fix comment alignment

--- a/app/frontend/src/assets/css/staff.css
+++ b/app/frontend/src/assets/css/staff.css
@@ -225,7 +225,7 @@
 }
 
 .staff__achievement__comment__user {
-  flex-basis: 180px;
+  flex-basis: 210px;
   flex-shrink: 0;
 
   display: flex;
